# Focus

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  VINS-Focus  VINS-Focus.cbp  configure.sh  main.cpp
core/: CMakeLists.txt  core.hpp
core/transport/: Node.hpp  Publisher.hpp  Subscriber.hpp  Topic.hpp
core/transport/msg/: sensor_image_gray.vins  sensor_image_rgb.vins
core/transport/msg_generated/: sensor_accel.hpp  sensor_gyro.hpp  sensor_image_gray.hpp  sensor_image_rgb.hpp
modules/vins_core/: CMakeLists.txt  core.hpp
modules/vins_core/configurations/: camera_config.yaml  config.yaml  dataset_config.yaml  video_config.yaml
modules/vins_core/dataset_handler/: DatasetHandler.cpp  DatasetHandler.hpp  config.yaml
modules/vins_core/node/: Node.cpp  Node.hpp
modules/vins_core/param_handler/: ParamHandler.cpp  ParamHandler.hpp  params.yaml
modules/vins_core/publisher/: Publisher.cpp  Publisher.hpp
modules/vins_core/subscriber/: Subscriber.cpp  Subscriber.hpp
modules/vins_core/topics/: Topic.hpp
modules/vins_core/topics/msg/: sensor_accel.hpp  sensor_gyro.hpp  sensor_image.hpp
modules/vins_core/video_source/: CameraHandler.cpp  CameraHandler.hpp  DataPackageBase.hpp  DatasetHandler.cpp  DatasetHandler.hpp  StreamHandler.cpp  StreamHandler.h  VideoHandler.cpp  VideoHandler.hpp  VideoSource.cpp  VideoSource.hpp  VideoSourceFactory.hpp  camera_config.yaml  config.yaml  video_config.yaml  video_source.hpp
modules/vins_core/video_source/inc/: CameraHandler.hpp  DataPackageBase.hpp  StreamHandler.hpp  VideoHandler.hpp  VideoSourceFactory.hpp
modules/vins_core/video_source/src/: CameraHandler.cpp  DatasetHandler.cpp  StreamHandler.cpp  VideoHandler.cpp  VideoSource.cpp
modules/vins_sensors/: CMakeLists.txt
modules/vins_sensors/imu/: imu.hpp
modules/vins_sensors/imu/config/: config.yaml
modules/vins_sensors/imu/inc/: InertialSource.hpp  InertialSourceFactory.hpp
modules/vins_sensors/imu/src/: InertialSource.cpp
modules/vins_sensors/video/: video.hpp
modules/vins_sensors/video/config/: config.yaml
modules/vins_sensors/video/inc/: CameraHandler.hpp  DataPackageBase.hpp  DatasetHandler.hpp  StreamHandler.hpp  VideoHandler.hpp  VideoSource.hpp  VideoSourceFactory.hpp
modules/vins_sensors/video/src/: CameraHandler.cpp  DatasetHandler.cpp  StreamHandler.cpp  VideoHandler.cpp  VideoSource.cpp
modules/vins_utils/: CMakeLists.txt  print_info.hpp
nodes/: CMakeLists.txt
nodes/imu_node/: IMUNode.cpp  IMUNode.hpp
nodes/video_node/: VideoNode.cpp  VideoNode.hpp
sensors/: CMakeLists.txt
sensors/imu/: imu.hpp
sensors/imu/basic_source/: InertialSource.cpp  InertialSource.hpp  InertialSourceFactory.hpp
sensors/imu/config/: config.yaml
sensors/imu/imu_file/: IMUFileHandler.cpp  IMUFileHandler.hpp
sensors/imu/imu_gazebo/: IMUGazeboHandler.cpp  IMUGazeboHandler.hpp
sensors/imu/imu_sensor/: IMUSensorHandler.cpp  IMUSensorHandler.hpp
sensors/video/: DataPackageBase.hpp  video.hpp
sensors/video/basic_source/: VideoSource.cpp  VideoSource.hpp  VideoSourceFactory.hpp
sensors/video/config/: config.yaml
sensors/video/video_camera/: CameraHandler.cpp  CameraHandler.hpp
sensors/video/video_dataset/: DatasetHandler.cpp  DatasetHandler.hpp
sensors/video/video_record/: VideoHandler.cpp  VideoHandler.hpp
sensors/video/video_stream/: StreamHandler.cpp  StreamHandler.hpp
tools/: dataset.py  msg_generator.py  msg_template_hpp.j2  process_dataset.py
tools/VINS-Configurator/: app.py  configure.sh  requirements.txt
tools/VINS-Configurator/templates/: edit.html  index.html
utils/: CMakeLists.txt  print_info.hpp
